fix cursor spacing on windows

--- a/src/host_web/webchuck/css/editor.css
+++ b/src/host_web/webchuck/css/editor.css
@@ -154,3 +154,6 @@ th, td {
     outline:0;
 }
 
+.ace_editor * {
+    font-family: monospace !important;
+}
